Source/JavaScriptCore/b3/B3BasicBlock.h
@@ -95,7 +95,7 @@ public:
 
     double frequency() const { return m_frequency; }
 
-    void removeNops();
+    void removeNops(Procedure&);
 
     void dump(PrintStream&) const;
     void deepDump(PrintStream&) const;
